syntax = "proto3";

option go_package = "github.com/jspc/wg-sock-stats/stats";

import "google/protobuf/timestamp.proto";

// Stats provides Wiregard interface stats for further
// services, in such a way that provides one-way, read-only
// access
service Stats {
  rpc Get(Statistics) returns (Statistics) {}
}

// Statistics returns a snapshot of current stats for
// the local server.
//
// The data is accurate at the time it's generated by
// wireguard, and so may be totally wrong by the time
// it's parsed by the caller /shrug
message Statistics {
  google.protobuf.Timestamp datetime = 1;
  string address = 2;
  string publicKey = 3;
  double sent_bytes = 4;
  double received_bytes = 5;
  repeated Peer peer = 6;
}

// Peer represents an individual peer connection.
//
// Some fields may be missing, depending on how
// the wg-sock-stats daemon is configured (the default
// is optimised for security and speed)
message Peer {
  string publicKey = 1;
  string address = 2;
  string allowedIPs = 3;
  google.protobuf.Timestamp handshake = 4;
  double sent_bytes = 5;
  double received_bytes = 6;

  // The following are enhanced versions of the above
  Owner owner = 7;
  string ptr = 8;
}

message Owner {
  string name = 1;
  string email = 2;
}